--- a/src/components/News/styles/News.scss
+++ b/src/components/News/styles/News.scss
@@ -1,11 +1,3 @@
 @import 'NewsList';
 @import 'NewsEditor';
 @import 'NewsViewer';
-
-.news-header .header-title {
-    width: 100%;
-
-    .add-new {
-        float: right;
-    }
-}
