--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -24,7 +24,7 @@
     margin-top: 1rem;
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.35);
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 
